Fixed the weird width issue on home page/footer
Fixed the issue on teh home page where there was some extra margin added
to the right side. Also fixed the footer links which also had a small
margin added to the right side.

--- a/css/home.css
+++ b/css/home.css
@@ -33,7 +33,7 @@ div div a {
 
 .expertise {
 	text-align: center;
-	margin: 2% 2% 0 2%;
+	margin: 2% 0% 0 2%;
 	font-size: 1.2em;	
 }
 
