--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -32,9 +32,7 @@ nav {
 	  
 }
 
-ul {
-	padding-right: 2%;	
-}
+
 
 .navigation {
     display: inline;
